# wiki2md

./: .gitignore  Cargo.toml  README.md  fuzz-cov.sh  fuzz-hangs.sh  fuzz.sh  perf-flamegraph.sh
docs/wikitext-spec/: wikitext_basic_formatting.mediawiki  wikitext_categories.mediawiki  wikitext_images.mediawiki  wikitext_links.mediawiki  wikitext_lists.mediawiki  wikitext_magic_words.mediawiki  wikitext_urls.mediawiki
fuzz/afl/: README.md
fuzz/afl/dict/: wikitext.dict
fuzz/afl/in/: seed_basic.wiki  seed_codeblock_same_line.wiki  seed_codeblocks.wiki  seed_evu_template.wiki  seed_file_and_br.wiki  seed_minimal.wiki  seed_refs.wiki  seed_refs_and_files.wiki  seed_rowspan_colspan.wiki  seed_table.wiki
src/: convert.rs  frontmatter.rs  lib.rs  main.rs  wiki.rs
src/ast/: diagnostic.rs  envelope.rs  mod.rs  nodes.rs  span.rs
src/parse/: mod.rs  table.rs  util.rs
src/render/: mod.rs
tests/: cli_cache.rs  crashers.rs  format.rs  frontmatter.rs  fuzz_parse.rs  list_depth_clamp.rs  pathological_delims.rs
tests/crashes/: minimized000.txt  minimized001.txt  minimized002.txt
tests/testdata/: 001-in-wikitable-text-align.wiki  001-out-wikitable-text-align.txt  001-want-wikitable-text-align.txt
wikitext-spec/: wikitext_examples.mediawiki  wikitext_references.mediawiki  wikitext_tables.mediawiki
