[package]
name = "wiki2md"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
html-escape = "0.2.13"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.16.0"
